# Protocol_V1_Soroban

./: .gitignore  Cargo.toml  README.md  contract_deployment  local_tests.txt  run.md  testnet_test_script.sh  testnet_tests_v1  testnet_tests_v2.txt  upload_contract.txt  upload_contracts.sh
contracts/AccountContract/: Cargo.toml
contracts/AccountFactoryContract/: Cargo.toml
contracts/AccountManagerContract/: Cargo.toml
contracts/AccountManagerContract/src/: account_manager.rs  lib.rs  types.rs
contracts/DeployerContract/: Cargo.toml
contracts/DeployerLPoolContract/: Cargo.toml
contracts/LendingProtocolEURC/: Cargo.toml
contracts/LendingProtocolUSDC/: Cargo.toml
contracts/LendingProtocolXLM/: Cargo.toml
contracts/OracleContract/: Cargo.toml
contracts/RateModelContract/: Cargo.toml
contracts/RegistryContract/: Cargo.toml
contracts/RiskEngineContract/: Cargo.toml
contracts/SmartAccountContract/: Cargo.toml
contracts/TrackingTokenContract/: Cargo.toml
contracts/VEURCTokenContract/: Cargo.toml
contracts/VUSDCTokenContract/: Cargo.toml
contracts/VXLMTokenContract/: Cargo.toml
docs/: How to create a Stellar Classic token.txt  How to create vToken.txt
integrated_test/: Cargo.toml
integrated_test/src/: main.rs
integrated_test/src/tests/: account_manager_contract_tests.rs  account_manager_test.rs  external_protocol_integration_tests.rs  lending_protocol_eurc_tests.rs  lending_protocol_usdc_tests.rs  lending_protocol_xlm_tests.rs  mod.rs  registry_contract_tests.rs  risk_engine_contract_tests.rs  smart_account_contract_tests.rs
(+72 files in other folders)
